# glancehud

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
android/: README.md  build.gradle.kts  consumer-rules.pro  settings.gradle.kts
android/example/: build.gradle.kts
android/example/src/main/: AndroidManifest.xml
android/example/src/main/kotlin/com/glancehud/example/: MainActivity.kt
android/service/: build.gradle.kts
android/service/src/main/: AndroidManifest.xml
android/service/src/main/kotlin/com/glancehud/service/: GlanceOverlayService.kt  GlancePersistentHud.kt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  glance_jni.cpp
android/src/main/cpp/providers/: CpuProvider.cpp  CpuProvider.hpp  NetProvider.cpp  NetProvider.hpp  RamProvider.cpp  RamProvider.hpp
android/src/main/kotlin/com/glancehud/: GlanceHud.kt  GlanceOverlayManager.kt  GlanceOverlayService.kt  GlanceOverlayView.kt
core/: CMakeLists.txt
core/include/glancehud/: Api.h  Config.hpp  IClock.hpp  IMetricProvider.hpp  IOverlayRenderer.hpp  MetricSample.hpp  MetricType.hpp  PerfOverlay.hpp  Snapshot.hpp  Version.hpp
core/src/: Api.cpp  FpsCalculator.cpp  FpsCalculator.hpp  MetricsEngine.cpp  MetricsEngine.hpp  PerfOverlay.cpp  SnapshotStore.cpp  SnapshotStore.hpp  SteadyClock.hpp  Version.cpp
core/tests/: CMakeLists.txt  engine_test.cpp  smoke_test.cpp
docs/: Doxyfile  architecture.md  getting-started.md
examples/: README.md
flutter/: README.md
ios/: README.md
react-native/: README.md
